Layout bug fixes

--- a/src/css/projects-grid.css
+++ b/src/css/projects-grid.css
@@ -10,6 +10,7 @@
     grid-auto-columns: minmax(33%,1fr);
     grid-template-rows: 50% 50%;
     grid-auto-rows: 50% 50%;
+    height: 60vh;
     align-content: center;
     justify-items: center;
     grid-auto-flow: column;
@@ -51,25 +52,31 @@
     margin: 10px 15px;
     transition:ease-in-out 0.3s;
     cursor: pointer;
+    width: 100%;
+    height: 100%;
 }
 
 .project-item:hover{
     opacity: 0.5;
 }
 
-.project-item img{
-    width: 100%;
+.project-item img{   
+    width: 25vw;
+    height: 80%;
+    object-fit: cover;
+    object-position: bottom;
     border: 7px solid #161616;
 }
 
 .project-item p{
     padding: 0.3vh 0 0.5vw 0.5vw;
-    margin: -0.5vh 0 0 0;
+    margin: -0.5vh auto;
     text-align: left;
     font-weight: 300;
+    width: 25vw;
     color: rgb(236, 252, 16);
     background-color: #161616;
-    font-size: 1.5vw;
+    font-size: 3vh;
 }
 
 @media only screen and (max-width:768px){
