--- a/src/css/skills-page.css
+++ b/src/css/skills-page.css
@@ -22,6 +22,7 @@
 
 .skills-group ul{
     list-style-position: inside;
+    font-size: 2vh;
 }
 
 @media only screen and (max-width:768px) and (orientation: landscape){
